--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,31 +3,24 @@ server:
   servlet:
     context-path: /bootscoder  # 所有接口前缀为 /bootscoder
 
+# 数据库和 Redis 配置
+spring:
+  datasource:
+    url: jdbc:mysql://110.41.60.133:3306/redis-service?useSSL=true&serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
+    username: root
+    password: root1234
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  redis:
+    connection:
+      host: 110.41.60.133
+      port: 6379
+      password: root
 
+# mybatis 配置
+mybatis:
+  mapper-locations: classpath:com/example/demo/mapper/*Mapper.xml
+  type-aliases-package: com.example.demo.entity
 
-# 数据库的相关配置
-#spring:
-#  datasource:
-#    url: jdbc:mysql://localhost:3306/your_database_name?useSSL=false&serverTimezone=UTC&characterEncoding=utf8
-#    username: root
-#    password: your_password
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#
-#  redis:
-#    host: localhost
-#    port: 6379
-#    timeout: 5000
-
-#  jackson:
-#    date-format: yyyy-MM-dd HH:mm:ss
-#    time-zone: Asia/Shanghai
-#
-#  mvc:
-#    cors:
-#      allowed-origins: "*"
-#      allowed-methods: "*"
-#      allowed-headers: "*"
-#
 logging:
   level:
     root: info
@@ -35,20 +28,18 @@ logging:
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 
-
-# 自定义springboot yml配置
-#定义一个对象
+# 自定义 springboot 配置
 connectionInfo:
   email: 3552618816@qq.com
   wechat: Tsing0521
 
 myconfig:
-    moreAdvanceProfile:
-      internship:
-        - ChanJet-java-dataDepartment
-        - YUNJie-backend-leader
-      selfProject:
-        - name: shopping
-          tech: springboot+redis+mysql
-        - name: PropertyManagementSystem
-          tech: fastDFS
+  moreAdvanceProfile:
+    internship:
+      - ChanJet-java-dataDepartment
+      - YUNJie-backend-leader
+    selfProject:
+      - name: shopping
+        tech: springboot+redis+mysql
+      - name: PropertyManagementSystem
+        tech: fastDFS
