--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,16 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
         <!-- MySQL 驱动，用于连接 MySQL 数据库 -->
         <dependency>
             <groupId>com.mysql</groupId>
