--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,12 @@ spring:
       host: 110.41.60.133
       port: 6379
       password: root
+#开启所有监控端点
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
 
 # mybatis 配置
 mybatis:
